--- a/composer.json
+++ b/composer.json
@@ -95,6 +95,7 @@
         }
     },
     "require-dev": {
+        "beberlei/assert": "^3.3",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "5.4.*",
