--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
     "devDependencies": {
         "@hotwired/stimulus": "^3.0.0",
+        "@popperjs/core": "^2.11.5",
         "@symfony/stimulus-bridge": "^3.0.0",
         "@symfony/webpack-encore": "^2.0.0",
+        "bootstrap": "5.0.2",
         "core-js": "^3.0.0",
+        "jquery": "^3.6.0",
         "regenerator-runtime": "^0.13.2",
+        "sass": "^1.52.3",
+        "sass-loader": "^12.0.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -14,5 +19,6 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
-    }
+    },
+    "dependencies": {}
 }
