--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,12 @@
     "symfony/polyfill-php72": "*"
   },
   "scripts": {
+    "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon src tests --level 7 --no-progress",
+    "tests": "phpunit --configuration phpunit.xml.dist",
+    "ci": [
+      "@phpstan",
+      "@tests"
+    ],
     "auto-scripts": {
       "cache:clear": "symfony-cmd",
       "assets:install %PUBLIC_DIR%": "symfony-cmd"
@@ -105,6 +111,9 @@
     "symfony/maker-bundle": "^1.0",
     "symfony/phpunit-bridge": "^6.1",
     "symfony/stopwatch": "5.4.*",
-    "symfony/web-profiler-bundle": "5.4.*"
+    "symfony/web-profiler-bundle": "5.4.*",
+    "phpstan/extension-installer": "1.1.0",
+    "phpstan/phpstan-symfony": "1.2.5",
+    "phpstan/phpstan-doctrine": "1.3.9"
   }
 }
