--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "php": ">=7.4",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "api-platform/core": "^2.6",
     "doctrine/annotations": "^1.0",
     "doctrine/doctrine-bundle": "^2.6",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.12",
+    "nelmio/cors-bundle": "^2.2",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.5",
     "sensio/framework-extra-bundle": "^6.1",
