--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+api_controllers:
+    resource: '../src/UI/Http/Rest/Controller/'
+    type: annotation
+    prefix: /api
+
+web_controllers:
+    resource: '../src/UI/Http/Web/Controller/'
+    type: annotation
