--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,7 +1,7 @@
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
-
+        
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '13'
@@ -10,12 +10,12 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
-            App:
+            Post:
                 is_bundle: false
                 type: annotation
-                dir: '%kernel.project_dir%/src/Infrastructure/Persistence/Doctrine'
-                prefix: 'App\Infrastructure\Persistence\Doctrine'
-                alias: App\Doctrine
+                dir: '%kernel.project_dir%/src/Infrastructure/Post/Doctrine'
+                prefix: 'App\Infrastructure\Post\Doctrine'
+                alias: Post
 
 when@test:
     doctrine:
@@ -33,7 +33,7 @@ when@prod:
             result_cache_driver:
                 type: pool
                 pool: doctrine.result_cache_pool
-
+    
     framework:
         cache:
             pools:
