--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,7 +6,7 @@ parameters:
 	excludePaths:
 		- vendor/*
 		- var/*
-	symfony:
-		container_xml_path: var/cache/dev/App_KernelDevDebugContainer.xml
-	doctrine:
-		objectManagerLoader: tests/object-manager.php
+#	symfony:
+#		container_xml_path: var/cache/dev/App_KernelDevDebugContainer.xml
+#	doctrine:
+#		objectManagerLoader: tests/object-manager.php
